# crypto-regime-guard-bot

./: .gitignore  CODEX.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
config/: ema-cross.paper.toml  live.example.toml  paper.example.toml
crypto_regime_guard/: __init__.py  backtest.py  classic_strategies.py  cli.py  config.py  indicators.py  models.py  risk.py  scanner.py  strategy.py  strategy_catalog.py  trader.py
data/: sample_btc_usdt_1h.csv
docs/: architecture.md  ci-status.md  live-trading.md  setup-visual-guide.md  setup.md  strategy-selection.md
docs/research/: repo-evaluation-seed.csv  research-summary.md
docs/workflows/: ci.yml  research.yml
tests/: test_backtest.py  test_config_and_trader.py  test_indicators.py  test_scanner.py  test_strategy.py  test_strategy_catalog.py
