[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-regime-guard"
version = "0.1.0"
description = "Paper-first crypto trading strategy, backtester, and GitHub repo scanner."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GitHub-GPT Developer"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
crypto-regime-guard = "crypto_regime_guard.cli:main"

[tool.setuptools.packages.find]
include = ["crypto_regime_guard*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
