[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-regime-guard"
version = "0.2.0"
description = "Selectable-strategy, paper-first and live-capable crypto trading bot."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GitHub-GPT Developer"}]
dependencies = []

[project.optional-dependencies]
live = [
  "ccxt>=4.4.0"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]
all = [
  "ccxt>=4.4.0",
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
crypto-regime-guard = "crypto_regime_guard.cli:main"

[tool.setuptools.packages.find]
include = ["crypto_regime_guard*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
